src/main/kotlin/com/example/exit/global/error/custom/CustomErrorProperty.kt
package com.example.exit.global.error.custom

interface CustomErrorProperty {

    fun status(): Int

    fun message(): String

    fun code(): String
}